[fix bug 1317171] Stop home Fx copy from being covered by image.

--- a/media/css/mozorg/home/home.scss
+++ b/media/css/mozorg/home/home.scss
@@ -564,6 +564,13 @@ main {
         @media #{$mq-tablet} {
             @include font-size(24px);
         }
+
+        @media #{$mq-desktop} {
+            p {
+                max-width: 780px; // keep text from going behind the trees
+                margin: 0 auto 40px;
+            }
+        }
     }
 
     .forest-container {
